--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,9 @@ dependencies:
   syncfusion_flutter_gauges: ^20.1.60
   flutter: 
     sdk: flutter
+  
+  firebase_core:
+  firebase_database:
 
 dev_dependencies: 
   flutter_lints: ^2.0.0
